<resources>

    <!-- Credits & Main Info -->
    <string name="app_name">Sensor Clock</string>
    <string name="app_subtitle">an alarm clock for the not-yet-cognitive</string>
    <string name="collaborator_one">Jesse Scott</string>
    <string name="collaborator_two">Jay Cousins</string>
    <string name="collaborator_three">Open Design City, Berlin</string>
    <string name="collaborator_four">https://material.uplabs.com/kevinttob</string>


    <!-- Actions -->
    <string name="pick_file">Pick a file for %1$s weather</string>
    <string name="edit_alarm">Edit</string>

    <!-- Weather -->
    <string name="weather_type_cloud">cloudy</string>
    <string name="weather_type_rain">rainy</string>
    <string name="weather_type_snow">snowy</string>
    <string name="weather_type_sun">sunny</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="user_has_seen_onboarding">user_has_seen_onboarding</string>
    <string name="user_alarm_time">user_alarm_time</string>
    <string name="user_alarm_time_default">Please set an Alarm!</string>

    <string name="song_path_cloudy">song_path_cloudy</string>
    <string name="song_path_rainy">song_path_rainy</string>
    <string name="song_path_snowy">song_path_snowy</string>
    <string name="song_path_sunny">song_path_sunny</string>

    <!-- Receiver -->
    <string name="receiver_title">Wake Up!</string>
    <string name="receiver_text">New Notification!</string>
    <string name="receiver_ticker">New Message Alert!</string>

</resources>
