<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/textView"
                android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="bottom"
            android:layout_marginBottom="@dimen/main_row_height"
            android:layout_weight="0.5">

        <!-- Cloudy -->
        <LinearLayout
                android:id="@+id/ll_main_row_cloudy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_row_height">

            <ImageView
                    android:id="@+id/iv_main_row_icon_cloudy"
                    android:src="@drawable/cloud"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            <TextView
                    android:id="@+id/tv_main_row_label_cloudy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/weather_type_cloud"
                    android:layout_weight="0.5"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/iv_main_row_state_cloudy"
                    android:src="@android:drawable/btn_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <!-- Rainy -->
        <LinearLayout
                android:id="@+id/ll_main_row_rainy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_row_height">

            <ImageView
                    android:id="@+id/iv_main_row_icon_rainy"
                    android:src="@drawable/rain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            <TextView
                    android:id="@+id/tv_main_row_label_rainy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/weather_type_rain"
                    android:layout_weight="0.5"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/iv_main_row_state_rainy"
                    android:src="@android:drawable/btn_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <!-- Snowy -->
        <LinearLayout
                android:id="@+id/ll_main_row_snowy"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_row_height">

            <ImageView
                    android:id="@+id/iv_main_row_icon_snowy"
                    android:src="@drawable/snow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            <TextView
                    android:id="@+id/tv_main_row_label_snowy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/weather_type_snow"
                    android:layout_weight="0.5"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/iv_main_row_state_snowy"
                    android:src="@android:drawable/btn_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"/>
        </LinearLayout>

        <!-- Sunny -->
        <LinearLayout
                android:id="@+id/ll_main_row_sunny"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_row_height">

            <ImageView
                    android:id="@+id/iv_main_row_icon_sunny"
                    android:src="@drawable/sun"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            <TextView
                    android:id="@+id/tv_main_row_label_sunny"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/weather_type_sun"
                    android:layout_weight="0.5"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/iv_main_row_state_sunny"
                    android:src="@android:drawable/btn_star"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>